# jornada_dados_crud

./: README.md  desafio.py  pyproject.toml
