[tool.poetry]
name = "jornada-dados-crud"
version = "0.1.0"
description = ""
authors = ["Eduardo Quelotti <eduardoquelotti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
